--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/naju4.jpeg" rel="icon">
-
+  <link href="assets/img/naju3.jpeg" rel="icon">
+ 
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -90,8 +90,8 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/naju2.jpeg" class="img-fluid" alt="">
+          <div class="col-lg-4  text-center" data-aos="fade-right">
+            <img src="assets/img/naju2.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3> Web Developer.</h3>
@@ -334,51 +334,55 @@
           <p>Here i am sharing some website links and also images that are i completed and shared.</p>
         </div>
 
+
+
         <div class="row" data-aos="fade-up">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-responsive">Resposive</li>
-              <li data-filter=".filter-nonResponsive">Non-Responsive</li>
-              
+              <li data-filter=".filter-responsive">Responsive</li>
+              <li data-filter=".filter-nonResponsive">Non Responsive</li>
+              <!-- <li data-filter=".filter-web">Web</li> -->
             </ul>
           </div>
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
+
+
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-nonResponsive">
             <div class="portfolio-wrap">
               <img src="assets/img/121.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/121.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/121.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
                 <a href="https://najumudheenck3.github.io/StaticSpace/" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-nonResponsive">
-            <div class="portfolio-wrap" >
+            <div class="portfolio-wrap">
               <img src="assets/img/122.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/122.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/122.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
                 <a href="https://najumudheenck3.github.io/StaticSpotify/" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-responsive" >
-            <div class="portfolio-wrap ">
-              <img src="assets/img/123.jpg"  class="img-fluid" alt="">
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-responsive ">
+            <div class="portfolio-wrap">
+              <img src="assets/img/123.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/123.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/123.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
+                <a href="https://najumudheenck3.github.io/StaticSpotify/" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
-          </div>
-
-          
-
+          </div>   
         </div>
 
       </div>
