--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/naju3.jpeg" rel="icon">
+  <link href="assets/img/naju3.webp" rel="icon">
  
 
   <!-- Google Fonts -->
@@ -45,7 +45,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/naju3.jpeg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/naju3.webp" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Najumudheen ca</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -91,7 +91,7 @@
 
         <div class="row">
           <div class="col-lg-4  text-center" data-aos="fade-right">
-            <img src="assets/img/naju2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/naju2.webp" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3> Web Developer.</h3>
@@ -354,9 +354,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-nonResponsive">
             <div class="portfolio-wrap">
-              <img src="assets/img/121.jpg" class="img-fluid" alt="">
+              <img src="assets/img/121.webp" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/121.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/121.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
                 <a href="https://najumudheenck3.github.io/StaticSpace/" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -365,9 +365,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-nonResponsive">
             <div class="portfolio-wrap">
-              <img src="assets/img/122.jpg" class="img-fluid" alt="">
+              <img src="assets/img/122.webp" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/122.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/122.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
                 <a href="https://najumudheenck3.github.io/StaticSpotify/" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -376,9 +376,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-responsive ">
             <div class="portfolio-wrap">
-              <img src="assets/img/123.jpg" class="img-fluid" alt="">
+              <img src="assets/img/123.webp" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/123.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/123.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
                 <a href="https://najumudheenck3.github.io/StaticSpotify/" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
