--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Najumudheen ca</h1>
-      <p>I'm <span class="typed" data-typed-items=" Web Developer"></span></p>
+      <p class="d-none d-md-block">I'm <span class="typed" data-typed-items=" Web Developer"></span></p>
+      <p class="d-md-none">Web Developer</p>
     </div>
   </section><!-- End Hero -->
 
